--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
     "build": "tsc",
     "format": "prettier --write \"src/**/*.ts\"",
     "lint": "tslint -p tsconfig.json",
-    "prepublishOnly": "npm test && npm run lint",
-    "prepare": "npm run build",
-    "preversion": "npm run lint",
-    "version": "npm run format && git add -A src",
+    "prepublishOnly": "yarn test && yarn run lint",
+    "prepare": "yarn run build",
+    "preversion": "yarn run lint",
+    "version": "yarn run format && git add -A src",
     "postversion": "git push && git push --tags",
-    "debug": "npm run build && node --experimental-modules --es-module-specifier-resolution=node ./lib/debug.js"
+    "dev": "yarn run build && node --experimental-modules --es-module-specifier-resolution=node ./lib/debug.js",
+    "upg": "yarn upgrade --latest && yarn run build"
   },
   "repository": {
     "type": "git",
@@ -31,11 +32,12 @@
   },
   "homepage": "https://github.com/Ty4ka/deepler#readme",
   "devDependencies": {
-    "@types/node": "^16.9.2",
+    "@types/make-fetch-happen": "^9.0.1",
+    "@types/node": "^16.11.6",
     "prettier": "^2.4.1",
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
-    "typescript": "^4.4.3"
+    "typescript": "^4.4.4"
   },
   "files": [
     "lib/**/*"
@@ -43,7 +45,8 @@
   "dependencies": {
     "browser-manager": "^1.0.14",
     "is-running-process": "^1.0.0",
-    "proxy-extract": "^1.0.2",
+    "make-fetch-happen": "^9.1.0",
+    "proxy-extract": "^1.0.3",
     "time-helpers": "^1.0.0"
   }
 }
