--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "is-running-process": "^1.0.0",
     "lodash": "^4.17.21",
     "make-fetch-happen": "^9.1.0",
-    "time-helpers": "^1.0.0"
+    "time-helpers": "^1.0.0",
+    "translate-google": "^1.5.0"
   }
 }
