--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/lodash": "^4.14.177",
     "@types/make-fetch-happen": "^9.0.1",
     "@types/node": "^16.11.11",
+    "@types/tunnel": "^0.0.3",
     "prettier": "^2.5.0",
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
@@ -44,6 +45,7 @@
     "lib/**/*"
   ],
   "dependencies": {
+    "@vitalets/google-translate-api": "^7.0.0",
     "browser-manager": "^1.1.17",
     "dbtempo": "^1.0.6",
     "dprx-types": "^1.0.36",
@@ -51,6 +53,7 @@
     "lodash": "^4.17.21",
     "make-fetch-happen": "^9.1.0",
     "time-helpers": "^1.0.0",
-    "translate-google": "^1.5.0"
+    "translate-google": "^1.5.0",
+    "tunnel": "^0.0.6"
   }
 }
