--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "is-running-process": "^1.0.0",
     "lodash": "^4.17.21",
     "make-fetch-happen": "^9.1.0",
+    "p-queue": "^7.1.0",
     "time-helpers": "^1.0.0",
     "translate-google": "^1.5.0",
     "tunnel": "^0.0.6"
