--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@vitalets/google-translate-api": "^7.0.0",
     "browser-manager": "^1.1.17",
     "dbtempo": "^1.0.6",
+    "dotenv": "^10.0.0",
     "dprx-types": "^1.0.38",
     "is-running-process": "^1.0.0",
     "lodash": "^4.17.21",
